# v4l-utils

./: README.md  android-config.h
utils/v4l2-ctl/: CMakeLists.txt  build.sh  rk3588.android.arm64v8a.cmake  v4l2-ctl-subdev.cpp
